--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
         </ul>
       </a>
     </nav>
-    <!-- End of Navbar -->
+    <!-- End of navbar -->
     <div style="padding-left: 15px">
       <div class="terminal-text">Last login: Sun May 1 11:53:40 on ttys000</div>
       <img
@@ -66,6 +66,19 @@
         style="padding-right: 4px"
       />
       <span class="terminal-text-highlighted">~ </span>
+      <span class="terminal-text-highlighted">cd </span>
+      <span class="terminal-text">development/portfolio</span>
+      <div></div>
+      <img
+        src="assets/images/terminal-symbol.svg"
+        alt="terminal new line symbol"
+        style="padding-right: 4px; padding-top: 15px"
+      />
+
+      <span class="terminal-text-highlighted">portfolio [</span>
+      <span style="color: #60fdff">main</span>
+      <span class="terminal-text-highlighted">]</span>
+      <span>⚡️</span>
       <span id="typewriter"></span>
       <script type="text/javascript">
         const typewriter = new Typewriter("#typewriter", {
@@ -74,10 +87,8 @@
         });
 
         typewriter
-          .typeString('<span class="terminal-text-highlighted">cd </span>')
-          .typeString(
-            '<span class="terminal-text">development/portfolio</span>'
-          )
+          .typeString('<span class="terminal-text-highlighted">make </span>')
+          .typeString('<span class="terminal-text">contact</span>')
           .start();
 
         setTimeout(function () {
@@ -85,9 +96,12 @@
           document.querySelector(".Typewriter__cursor").style.backgroundColor =
             "transparent";
           document.getElementById("line-2").style.display = "block";
-        }, 4000);
+        }, 2000);
       </script>
       <div id="line-2" style="display: none">
+        <span class="terminal-text">Florian Schmitz</span>
+        <div class="terminal-text">contact@flo-dev.me</div>
+
         <img
           src="assets/images/terminal-symbol.svg"
           alt="terminal new line symbol"
