add empty pages

--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
           <li>⌘1</li>
         </ul>
       </a>
-      <a class="nav-button" href="#about">
+      <a class="nav-button" href="about.html">
         <ul>
           <li class="nav-button-text">About</li>
           <li>⌘2</li>
         </ul>
       </a>
-      <a class="nav-button" href="#projects">
+      <a class="nav-button" href="projects.html">
         <ul>
           <li class="nav-button-text">Projects</li>
           <li>⌘3</li>
         </ul>
       </a>
-      <a class="nav-button" href="#blog">
+      <a class="nav-button" href="blog.html">
         <ul>
           <li class="nav-button-text">Blog</li>
           <li>⌘4</li>
