--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,7 @@
           <li>⌘1</li>
         </ul>
       </a>
-      <a class="nav-button" href="#about">
+      <a class="nav-button" href="about.html">
         <ul>
           <li class="nav-button-text">About</li>
           <li>⌘2</li>
@@ -88,7 +88,7 @@
 
         typewriter
           .typeString('<span class="terminal-text-highlighted">make </span>')
-          .typeString('<span class="terminal-text">contact</span>')
+          .typeString('<span class="terminal-text">projects</span>')
           .start();
 
         setTimeout(function () {
@@ -99,8 +99,7 @@
         }, 2000);
       </script>
       <div id="line-2" style="display: none">
-        <div class="terminal-text">Florian Schmitz</div>
-        <div class="terminal-text">contact@flo-dev.me</div>
+        <div class="terminal-text">Weird, there's nothing going on here...</div>
 
         <img
           src="assets/images/terminal-symbol.svg"
