fix help message

--- a/index.html
+++ b/index.html
@@ -233,10 +233,10 @@
                 ) {
                   const help = document.createElement("p");
                   help.innerHTML = `<span class="terminal-text-highlighted">/help</span> - shows this help message<br />`;
-                  help.innerHTML += `<span class="terminal-text-highlighted">/about</span> - shows information about me (soon)<br />`;
-                  help.innerHTML += `<span class="terminal-text-highlighted">/projects</span> - shows my projects (soon)<br />`;
-                  help.innerHTML += `<span class="terminal-text-highlighted">/blog</span> - shows my blog (soon)<br />`;
-                  help.innerHTML += `<span class="terminal-text-highlighted">/contact</span> - shows my contact informations (soon)<br />`;
+                  help.innerHTML += `<span class="terminal-text-highlighted">/about</span> - shows information about me<br />`;
+                  help.innerHTML += `<span class="terminal-text-highlighted">/projects</span> - shows my projects<br />`;
+                  help.innerHTML += `<span class="terminal-text-highlighted">/blog</span> - shows my blog<br />`;
+                  help.innerHTML += `<span class="terminal-text-highlighted">/contact</span> - shows my contact informations<br />`;
                   help.innerHTML += `<span class="terminal-text-highlighted">/clear</span> - clears the terminal (soon)<br />`;
                   help.innerHTML += `<span class="terminal-text-highlighted">/exit</span> - exits the terminal (soon)`;
                   help.className = "terminal-text";
